pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp
  name: hy-kube-pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hy-kube-pingpong
  template:
    metadata:
      labels:
        app: hy-kube-pingpong
    spec:
      containers:
        - name: hy-kube-pingpong
          image: tkasu/hy-kube-pingpong:ex2.03
          imagePullPolicy: Always
