pingpong/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-db
  namespace: mainapp
  labels:
    app: pingpong-db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: pingpong-postgres
