pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp
  name: pingpong-svc
  labels:
    app: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
